--- a/index.html
+++ b/index.html
@@ -129,25 +129,25 @@
               <div class="member-link">
                 <ul class="member-link-list list">
                   <li class="list"><a class="member-link-item link first" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                     </svg></a>
                   </li>
@@ -163,25 +163,25 @@
               <div class="member-link">
                 <ul class="member-link-list list">
                   <li class="list"><a class="member-link-item link first" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                     </svg></a>
                   </li>
@@ -197,25 +197,25 @@
               <div class="member-link">
                 <ul class="member-link-list list">
                   <li class="list"><a class="member-link-item link first" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                     </svg></a>
                   </li>
@@ -231,25 +231,25 @@
               <div class="member-link">
                 <ul class="member-link-list list">
                   <li class="list"><a class="member-link-item link first" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                     </svg></a>
                   </li>
 
                   <li class="list"><a class="member-link-item link" href="">
-                    <svg class="links-icon" widht='20' height='20'>
+                    <svg class="links-icon">
                       <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                     </svg></a>
                   </li>
@@ -324,25 +324,25 @@
       <h3 class="footer-link-title">приєднуйтесь</h3>
       <ul class="footer-links">
         <li class="list"><a class="footer-links-item link first" href="">
-          <svg class="links-icon" widht='20' height='20'>
+          <svg class="links-icon">
             <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
           </svg></a>
         </li>
 
         <li class="list"><a class="footer-links-item link" href="">
-          <svg class="links-icon" widht='20' height='20'>
+          <svg class="links-icon">
             <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
           </svg></a>
         </li>
         
         <li class="list"><a class="footer-links-item link" href="">
-          <svg class="links-icon" widht='20' height='20'>
+          <svg class="links-icon">
             <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
           </svg></a>
         </li>
 
         <li class="list"><a class="footer-links-item link" href="">
-          <svg class="links-icon" widht='20' height='20'>
+          <svg class="links-icon">
             <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
           </svg></a>
         </li>
