--- a/index.html
+++ b/index.html
@@ -269,33 +269,33 @@
       <ul class="clients-list">
         <li class="list">
           <a class="clients-link link first" href="">
-            <svg class="client-logo-icon" widht='106' height='60'>
+            <svg class="client-logo-icon">
               <use href="./images/svg/symbol-defs.svg#icon-client-logo1"></use>
             </svg>
           </a>
         </li>
         <li class="list"><a class="clients-link link" href="">
-          <svg class="client-logo-icon" widht='106' height='60'>
+          <svg class="client-logo-icon">
             <use href="./images/svg/symbol-defs.svg#icon-client-logo2"></use>
           </svg>
         </a></li>
         <li class="list"><a class="clients-link link" href="">
-          <svg class="client-logo-icon" widht='106' height='60'>
+          <svg class="client-logo-icon">
             <use href="./images/svg/symbol-defs.svg#icon-client-logo3"></use>
           </svg>
         </a></li>
         <li class="list"><a class="clients-link link" href="">
-          <svg class="client-logo-icon" widht='106' height='60'>
+          <svg class="client-logo-icon">
             <use href="./images/svg/symbol-defs.svg#icon-client-logo4"></use>
           </svg>
         </a></li>
         <li class="list"><a class="clients-link link" href="">
-          <svg class="client-logo-icon" widht='106' height='60'>
+          <svg class="client-logo-icon">
             <use href="./images/svg/symbol-defs.svg#icon-client-logo5"></use>
           </svg>
         </a></li>
         <li class="list"><a class="clients-link link" href="">
-          <svg class="client-logo-icon" widht='106' height='60'>
+          <svg class="client-logo-icon">
             <use href="./images/svg/symbol-defs.svg#icon-client-logo6"></use>
           </svg>
         </a></li>
