--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 
         <li class="header-items-adress list">
           <a class="header-mail link" href="mailto:info@devstudio.com">
-              <svg class="contact-link-icon" widht='10' height='16'>
+              <svg class="contact-link-icon">
                 <use href="./images/svg/symbol-defs.svg#icon-envelope"></use>
               </svg>
-              <span class="header-mail-span">info@devstudio.com</span>
+              info@devstudio.com
           </a>
         </li>
         <li class="header-items-adress list">
           <a class="header-tel link" href="tel:+380961111111">
-              <svg class="contact-link-icon" widht='10' height='16'>
+              <svg class="contact-link-icon">
                 <use href="./images/svg/symbol-defs.svg#icon-smartphone"></use>
               </svg>
-              <span class="header-tel-span">+38 096 111 11 11</span>
+              +38 096 111 11 11
         </a>
         </li>
       </ul>
